CHANGES IN VERSION 1.1.19
------------------------
 o remove dependency of EBImage and phytools to speedup the installation process of ggtree <2015-08-31>
   + these two packages is not commonly used, and will be loaded automatically when needed.
 
CHANGES IN VERSION 1.1.18
------------------------
 o layout name change to 'rectangular', 'slanted', 'circular'/'fan' for phylogram and cladogram (if branch.length = 'none')
     'unroot' is not changed. <2015-08-28. Fri>
 o implement geom_point2, geom_text2, geom_segment2 to support subsetting <2015-08-28, Fri>
     see https://github.com/hadley/ggplot2/issues/1295
 o update geom_tiplab according to geom_text2 and geom_segment2 <2015-08-28, Fri>
 o add geom_tippoint, geom_nodepoint and geom_rootpoint <2015-08-28, Fri> 
 
CHANGES IN VERSION 1.1.17
------------------------
 o bug fixed in rm.singleton.newick by adding support of scientific notation in branch length <2015-08-27, Thu>
 o bug fixed in gheatmap, remove inherit aes from ggtree <2015-08-27, Thu>
 o add 'width' parameter to add_legend, now user can specify the width of legend bar <2015-08-27, Thu>
 o add 'colnames_position' parameter to gheatmap, now colnames can be display on the top of heatmap <2015-08-27, Thu> 
 o theme_transparent to make background transparent <2015-08-27, Thu>
 o subview for adding ggplot object (subview) to another ggplot object (mainview) <2015-08-27, Thu>  
 
CHANGES IN VERSION 1.1.16
------------------------
 o update citation <2015-08-17, Mon>
 
CHANGES IN VERSION 1.1.15
------------------------
 o open text angle parameter for annotation_clade/annotation_clade2 <2015-08-13, Thu>
 o support changing size of add_legend <2015-08-13, Thu>
 o reroot methods for phylo and beast <2015-08-07, Fri>
 
CHANGES IN VERSION 1.1.14
------------------------
 o update paml_rst to compatible with only marginal ancestral sequence or joint ancestral sequence available <2015-08-07, Fri>
 
CHANGES IN VERSION 1.1.13
------------------------